--- a/css/signup-user.css
+++ b/css/signup-user.css
@@ -1,383 +1,189 @@
-@import url('https://fonts.googleapis.com/css2?family=Belanosima&family=EB+Garamond:wght@500&family=Inter:wght@500&family=Montserrat:wght@500&family=Nunito:ital,wght@0,600;0,700;0,1000;1,900&family=Roboto+Serif&family=Roboto+Slab:wght@500;600&family=Roboto:ital,wght@0,700;1,500&family=Rowdies:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Nunito:ital,wght@0,600;1,700&family=Roboto+Slab&family=Roboto:ital,wght@0,500;0,700;1,400;1,500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&family=Nunito:ital,wght@0,600;1,700&family=Roboto+Slab:wght@600&family=Roboto:ital,wght@0,500;0,700;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Rubik:wght@600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
-.login-page {
+html,
+body {
+    /* height: 100%; */
+    background-color: #E8E8E8;
+}
+
+/* bagian menu dan logo */
+.bagian-atas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    z-index: 10;
+}
+
+.all-bagian-atas {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 80px 12%;
+    padding: 15px 10%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.page-kiri img {
-    width: 300px;
-    margin-right: 50px;
+.all-right {
+    display: flex;
 }
 
-form {
-    border: 2px solid #000;
-    width: 370px;
-    height: 420px;
-    border-radius: 10px;
+.all-right img {
+    width: 80px;
 }
 
-.title-login p {
-    text-align: center;
-    padding: 30px 0;
-    font-size: 30px;
-    font-weight: bold;
+.all-right p {
+    margin-top: 5px;
     font-family: 'Roboto Slab', serif;
+    font-size: 12px;
+    margin-right: 50px;
     cursor: default;
 }
 
-.input-text {
-    width: 280px;
-    height: 30px;
-    margin-top: 30px;
-    padding-left: 5px;
-    border-radius: 7px;
-    border: 2px solid #000;
+.all-left {
+    margin-top: 20px;
 }
 
-.input-text:focus {
-    outline: none;
-}
-
-.input-password {
-    width: 200px;
-    height: 25px;
-    border: none;
-    margin-right: 48px;
-}
-
-.all-input-chk {
-    border: 2px solid #000;
-    width: 280px;
-    height: 30px;
-    border-radius: 7px;
-}
-
-.input-chk {
-    cursor: pointer;
-}
-
-.input-password:focus {
-    outline: none;
-}
-
-.cnf-input-password {
-    width: 200px;
-    height: 25px;
-    border: none;
-    margin-right: 48px;
-}
-
-.cnf-input-chk {
-    border: 2px solid #000;
-    width: 280px;
-    height: 30px;
-    border-radius: 7px;
-}
-
-.box-input-chk {
-    cursor: pointer;
-}
-
-.cnf-input-password:focus {
-    outline: none;
-}
-
-::placeholder {
-    color: #000;
-    font-size: 14px
-}
-
-label {
-    font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.input-remember {
-    margin-left: 45px;
-    cursor: pointer;
+.title-logo1 {
+    font-size: 35px;
 }
 
 button {
-    width: 280px;
-    height: 30px;
-    border-radius: 7px;
-    border: none;
-    background-color: #068FFF;
-    color: #fff;
+    width: 90px;
+    height: 40px;
+    margin-top: 23px;
     font-weight: bold;
-    font-size: 15px;
-}
-
-button:hover {
-    background-color: #0A6EBD;
+    font-size: 17px;
     cursor: pointer;
 }
 
-.to-admin {
-    text-align: center;
-    margin-top: 20px;
-    font-family: 'Roboto Slab', serif;
-    color: #000;
+.signin {
+    margin-right: 10px;
+    background-color: transparent;
+    border: #068FFF solid 2px;
+    border-radius: 5px;
 }
 
-/* responsive */
+.signin:hover {
+    border: #068FFF solid 3px;
+}
 
-@media (max-width: 955px) {
-    .page-kiri img {
-        width: 250px;
-        margin-top: 30px;
+.signup {
+    border: none;
+    background-color: #068FFF;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.signup:hover {
+    background-color: #3081D0;
+}
+
+@media (max-width: 560px) {
+    .all-right img {
+        width: 70px;
     }
 
-    form {
-        width: 320px;
-        height: 420px;
-        margin-top: -10px;
+    .all-right p {
+        font-size: 10px;
     }
 
-    .title-login p {
+    .title-logo1 {
+        font-size: 30px;
+    }
+
+    button {
+        width: 80px;
+        height: 30px;
+        font-size: 15px;
+    }
+
+    .all-bagian-atas {
+        padding: 15px 7%;
+    }
+}
+
+@media (max-width: 465px) {
+    .all-right img {
+        width: 60px;
+    }
+
+    .all-right p {
+        font-size: 9px;
+        margin-top: -1px;
+        margin-top: 5px;
+    }
+
+    .title-logo1 {
         font-size: 25px;
     }
 
-    .input-text {
-        width: 250px;
-    }
-
-    .all-input-chk {
-        width: 250px;
-    }
-
-    .input-password {
-        width: 173px;
-        margin-top: 2px;
-    }
-
-    .cnf-input-chk {
-        width: 250px;
-    }
-
-    .cnf-input-password {
-        width: 173px;
-        margin-top: 2px;
-    }
-
     button {
-        width: 250px;
-    }
-
-}
-
-@media (max-width: 825px) {
-    .login-page {
-        padding: 80px 8%;
-    }
-}
-
-@media (max-width: 745px) {
-    .page-kiri img {
-        width: 200px;
-        margin-top: 60px;
-    }
-
-    form {
-        border: 2px solid #000;
-        width: 300px;
-        height: 420px;
-        border-radius: 10px;
-    }
-
-    .input-text {
-        width: 230px;
-    }
-
-    .all-input-chk {
-        width: 230px;
-    }
-
-    .input-password {
-        width: 155px;
-        margin-top: 2px;
-    }
-
-    .cnf-input-chk {
-        width: 230px;
-    }
-
-    .cnf-input-password {
-        width: 155px;
-        margin-top: 2px;
-    }
-
-
-    button {
-        width: 230px;
-    }
-}
-
-@media (max-width: 660px) {
-    .login-page {
-        flex-direction: column;
-        align-items: center; 
-    }
-
-    .page-kiri img {
-        margin-top: -50px;
-        margin-right: 0; 
-        margin-bottom: 20px;
-        width: 300px;
-    }
-
-    form {
+        width: 70px;
+        height: 30px;
+        font-size: 15px;
+        margin-top: -5px;
         margin-top: 20px;
-        width: 340px;
-        height: 420px;
-    }
-
-    .input-text {
-        width: 250px;
-    }
-
-    .input-password {
-        width: 170px;
-    }
-    
-    .all-input-chk {
-        width: 250px;
-    }
-
-    .cnf-input-chk {
-        width: 250px;
-    }
-
-    .cnf-input-password {
-        width: 170px;
-    }
-
-    button {
-        width: 250px;
     }
 }
 
-@media (max-width: 410px) {
-    .page-kiri img {
-        width: 250px;
-    }
-
-    form {
-        width: 280px;
-        height: 420px;
-    }
-
-    .input-text {
-        width: 220px;
-    }
-
-    .input-password {
-        width: 140px;
-    }
-    
-    .all-input-chk {
-        width: 220px;
-    }
-
-    .cnf-input-chk {
-        width: 220px;
-    }
-
-    .cnf-input-password {
-        width: 140px;
-    }
-
-    button {
-        width: 220px;
+@media (max-width: 415px) {
+    .all-right p {
+        display: none;
     }
 }
 
-@media (max-width: 335px) {
-    .page-kiri img {
-        width: 200px;
-    }
-
-    form {
-        width: 250px;
-    }
-
-    .input-text {
-        width: 200px;
-    }
-
-    .input-password {
-        width: 120px;
-    }
-    
-    .all-input-chk {
-        width: 200px;
-    }
-
-    .cnf-input-chk {
-        width: 200px;
-    }
-
-    .cnf-input-password {
-        width: 120px;
-    }
-
-    button {
-        width: 200px;
-    }
+/* bagian kontent */
+.container-signup {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 5%;
+    margin-top: 200px;
+    background-color: #E8E8E8;
 }
 
-@media (max-width: 300px) {
-    .page-kiri img {
-        width: 180px;
-    }
-
-    form {
-        width: 220px;
-    }
-
-    .title-login p {
-        font-size: 20px;
-    }
-
-    .input-text {
-        width: 170px;
-    }
-
-    .input-password {
-        width: 90px;
-    }
-    
-    .all-input-chk {
-        width: 170px;
-    }
-
-    .cnf-input-chk {
-        width: 170px;
-    }
-
-    .cnf-input-password {
-        width: 90px;
-    }
-
-    .input-text::placeholder,
-    .input-password::placeholder,
-    .cnf-input-password::placeholder {
-        font-size: 11px;
-    }
-
-    button {
-        width: 170px;
-    }
+.konten-kiri {
+    margin-bottom: 50px;
 }
 
+.konten-input {
+    background-color: #fff;
+    padding: 20px;
+    height: 500px;
+    border-radius: 10px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+}
 
+.title {
+    font-size: 35px;
+    color: royalblue;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-family: 'Rubik',sans-serif;
+}
 
+.kirim {
+    font-size: 20px;
+    width: 380px;
+    border: transparent;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+    background: linear-gradient(180deg, #5FBDFF 0%, #39A7FF 50%, #00A9FF 100%);
+    color: white;
+    border-radius: 4px;
+}
+
+.kirim:hover {
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(30, 144, 255, 1) 0%, rgba(0, 212, 255, 1) 100%);
+}
+
+.kirim:active {
+    transform: translate(0em, 0.2em);
+}
