--- a/css/signup-user.css
+++ b/css/signup-user.css
@@ -146,11 +146,12 @@ button {
     justify-content: space-between;
     padding: 0 5%;
     margin-top: 200px;
+    margin-bottom: 70px;
     background-color: #E8E8E8;
 }
 
-.konten-kiri {
-    margin-bottom: 50px;
+.konten-kiri img {
+    margin-right: 50px;
 }
 
 .konten-input {
@@ -187,3 +188,27 @@ button {
 .kirim:active {
     transform: translate(0em, 0.2em);
 }
+
+@media (max-width: 1095px) {
+    .konten-kiri img {
+        width: 450px;
+        margin-top: 50px;
+    }
+}
+
+@media (max-width: 1025px) {
+    .container-signup {
+        display: block;
+    }
+
+      .konten-kiri img {
+          margin: 0 auto;
+          display: block;
+          width: 100%;
+      }
+
+      .kirim {
+        width: 100%;
+      }
+}
+
